syntax = "proto3";

import "motor/vault/vault.proto";

package cnquery.motor.providers.v1;
option go_package = "go.mondoo.com/cnquery/motor/providers";

enum ProviderType {
  LOCAL_OS = 0;
  DOCKER_ENGINE_IMAGE = 1;
  DOCKER_ENGINE_CONTAINER = 2;
  SSH = 3;
  WINRM = 4;
  AWS_SSM_RUN_COMMAND = 5;
  CONTAINER_REGISTRY = 6;
  TAR = 7;
  MOCK = 8;
  VSPHERE = 9;
  ARISTAEOS = 10;
  reserved 11;
  AWS = 12;
  GCP = 13;
  AZURE = 14;
  MS365 = 15;
  IPMI = 16;
  VSPHERE_VM = 17;
  FS = 18;
  K8S = 19;
  EQUINIX_METAL = 20;
  DOCKER = 21; // unspecified if this is a container or image
  GITHUB = 22;
  VAGRANT = 23;
  AWS_EC2_EBS = 24;
  GITLAB = 25;
  TERRAFORM = 26;
  HOST = 27;
  UNKNOWN = 28;
  OKTA = 29;
  GOOGLE_WORKSPACE = 30;
  SLACK = 31;
  VCD = 32;
}

enum Kind {
  KIND_UNKNOWN = 0;

  // at rest
  KIND_VIRTUAL_MACHINE_IMAGE = 1;
  KIND_CONTAINER_IMAGE = 2;
  KIND_CODE = 3;
  KIND_PACKAGE = 4;

  // in motion
  KIND_VIRTUAL_MACHINE = 5;
  KIND_CONTAINER = 6;
  KIND_PROCESS = 7;
  KIND_API = 8;
  KIND_BARE_METAL = 9;
  KIND_NETWORK = 10;
  KIND_K8S_OBJECT = 11;
}

message Config {
  reserved 6, 7, 9, 10, 20;

  ProviderType backend = 1;
  string host = 2;
  // Ports are not int by default, eg. docker://centos:latest parses a string as port
  // Therefore it is up to the provider to convert the port to what they need
  int32 port = 3;
  string path = 4;

  // credentials available for this provider configuration
  repeated cnquery.motor.vault.v1.Credential credentials = 11;

  bool insecure = 8;  // disable ssl/tls checks
  Sudo sudo = 21;
  bool record = 22;

  map<string,string> options = 23;

  // flags for additional asset discovery
  Discovery discover = 27;

  // additional platform information, passed-through
  Kind kind = 24;
  string runtime = 25;

  // configuration to uniquely identify an specific asset for multi-asset api connection
  string platform_id = 26;
}

message Sudo {
  bool active = 1;
  string user = 2;
  string shell = 3;
}

message Discovery {
  repeated string targets = 1;
  map<string,string> filter = 2;
}